; ModuleID = '/home/carl/AnghaBench/redshift/src/extr_solar.c_solar_elevation_from_time.c'
source_filename = "/home/carl/AnghaBench/redshift/src/extr_solar.c_solar_elevation_from_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double, double, double)* @solar_elevation_from_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @solar_elevation_from_time(double %0, double %1, double %2) #0 {
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  %10 = alloca double, align 8
  %11 = alloca double, align 8
  store double %0, double* %4, align 8
  store double %1, double* %5, align 8
  store double %2, double* %6, align 8
  %12 = load double, double* %4, align 8
  %13 = call double @jd_from_jcent(double %12)
  store double %13, double* %7, align 8
  %14 = load double, double* %7, align 8
  %15 = load double, double* %7, align 8
  %16 = call double @llvm.round.f64(double %15)
  %17 = fsub double %14, %16
  %18 = fsub double %17, 5.000000e-01
  %19 = fmul double %18, 1.440000e+03
  store double %19, double* %8, align 8
  %20 = load double, double* %4, align 8
  %21 = call double @equation_of_time(double %20)
  store double %21, double* %9, align 8
  %22 = load double, double* %8, align 8
  %23 = fsub double 7.200000e+02, %22
  %24 = load double, double* %9, align 8
  %25 = fsub double %23, %24
  %26 = fdiv double %25, 4.000000e+00
  %27 = load double, double* %6, align 8
  %28 = fsub double %26, %27
  %29 = fptosi double %28 to i32
  %30 = call double @RAD(i32 %29)
  store double %30, double* %10, align 8
  %31 = load double, double* %4, align 8
  %32 = call double @solar_declination(double %31)
  store double %32, double* %11, align 8
  %33 = load double, double* %5, align 8
  %34 = load double, double* %11, align 8
  %35 = load double, double* %10, align 8
  %36 = call double @elevation_from_hour_angle(double %33, double %34, double %35)
  ret double %36
}

declare dso_local double @jd_from_jcent(double) #1

; Function Attrs: nounwind readnone speculatable willreturn
declare double @llvm.round.f64(double) #2

declare dso_local double @equation_of_time(double) #1

declare dso_local double @RAD(i32) #1

declare dso_local double @solar_declination(double) #1

declare dso_local double @elevation_from_hour_angle(double, double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
